[package]
name = "rhome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.0.0", features = ["v4"] }
tokio = { version = "1.17.0", features = ["full"] }
bytes = "1.1.0"
tokio-stream = "0.1.8"
yaml-rust = "0.4.5"
derive_more = "0.99.17"
termion = "1.5.6"
chrono = "0.4.19"